--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
 <h1> Apprentissage HTML </h1>
 <p> J'apprends à coder grâce à des exercices !</p>
+<h2> Le code, c'est cool !</h2>
+<p2> Effectivement, l'apprentissage du code est quelque chose d'intéressant !</p>
+<h2> Git et Github, c'est un peu dur...</h2>
+<p3> Néanmoins, git et github sont quelques peu difficiles à prendre en main, mais ça va venir, ne désespérons pas !</p3>
+
 </body>
 </html>
